--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "rollup -c"
+    "start": "vite",
+    "build": "tsc && vite build && rollup -c"
   },
   "author": "llc1123",
   "license": "ISC",
@@ -15,27 +16,34 @@
   },
   "devDependencies": {
     "@llc1123/eslint-config": "^1.4.6",
-    "@rollup/plugin-commonjs": "^21.0.3",
-    "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/chrome": "^0.0.180",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
-    "eslint": "^8.13.0",
+    "@types/node": "^17.0.30",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "@vitejs/plugin-react": "^1.3.1",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.5",
     "eslint-plugin-prettier": "^4.0.0",
-    "postcss": "^8.4.12",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "postcss": "^8.4.13",
     "prettier": "^2.6.2",
-    "rollup": "^2.70.1",
-    "rollup-plugin-delete": "^2.0.0",
+    "rollup": "^2.71.1",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
-    "sass": "^1.50.0",
-    "typescript": "^4.6.3"
+    "sass": "^1.51.0",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.6"
   },
   "dependencies": {
     "@supercharge/promise-pool": "^2.1.0",
-    "fflate": "^0.7.3"
+    "fflate": "^0.7.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   }
 }
