--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "vite",
+    "release": "standard-version",
     "build": "tsc && vite build && rollup -c"
   },
   "author": "llc1123",
@@ -37,6 +37,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
     "sass": "^1.51.0",
+    "standard-version": "^9.3.2",
     "typescript": "^4.6.4",
     "vite": "^2.9.6"
   },
