--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "AMSR Download",
+  "name": "ASMR Download",
   "description": "Download Kikoeru files in one click!",
-  "version": "1.0",
+  "version": "1.0.0",
   "manifest_version": 3,
   "permissions": [
     "downloads"
@@ -18,5 +18,10 @@
   ],
   "background": {
     "service_worker": "background.js"
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   }
 }
